🎨 Add Creators app icons to Chrome extension
✨ Updates:
- Copied official app icons (16px, 48px, 128px) from desktop app
- Updated extension name: 'Creators Video Automation'
- Improved popup branding to match desktop app
- Added high-res app logo for future use

🔧 Icons copied from:
- logo.iconset/icon_16x16.png → icon16.png
- logo.iconset/icon_32x32@2x.png → icon48.png
- logo.iconset/icon_128x128.png → icon128.png

Now extension has consistent visual identity with desktop app! 🎯

--- a/chrome-extension-creators/popup.html
+++ b/chrome-extension-creators/popup.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo">📹 Paste to Creators</div>
+    <div class="logo">📹 Creators Video Automation</div>
     <div class="subtitle">Chrome Extension v1.0</div>
   </div>
 
